--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
   <header>
     <nav>
       <div class="menu">
+        <h2>Shortly</h2>
         <ul>
           <li>Features</li>
           <li>Pricing</li>
@@ -20,7 +21,7 @@
 
       <div class="login">
         <button>Login</button>
-        <button>Sign Up</button>
+        <button><span>Sign Up</span></button>
       </div>
       
     </nav>
