--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
   <link rel="stylesheet" href="./assets/style/style.css">
 </head>
+
 <body>
   <header>
     <nav>
@@ -23,46 +26,59 @@
         <button>Login</button>
         <button><span>Sign Up</span></button>
       </div>
-      
+
     </nav>
   </header>
 
-  
-  
-  
+  <div class="container">
+    <div class="card">
+      <div class="bodyText">
+        <div class="title">
+          <h1>More than just shorter links</h1>
+        </div>
 
-  Login
-  Sign Up
+        <div class="description">
+          <h2>Build your brand’s recognition and get detailed insights
+            on how your links are performing.
+          </h2>
+        </div>
 
-  More than just shorter links
+        <div class="btn">
+          <button>Get Started</button>
+        </div>
+      </div>
+      <div class="workerImage">
+        <img src="./images/illustration-working.svg" alt="">
+      </div>
+    </div>
+  </div>
 
-  Build your brand’s recognition and get detailed insights 
-  on how your links are performing.
+
 
   Get Started
-  
+
   Shorten a link here...
 
   Shorten It!
 
   Advanced Statistics
 
-  Track how your links are performing across the web with our 
+  Track how your links are performing across the web with our
   advanced statistics dashboard.
 
   Brand Recognition
 
-  Boost your brand recognition with each click. Generic links don’t 
+  Boost your brand recognition with each click. Generic links don’t
   mean a thing. Branded links help instil confidence in your content.
 
   Detailed Records
 
-  Gain insights into who is clicking your links. Knowing when and where 
+  Gain insights into who is clicking your links. Knowing when and where
   people engage with your content helps inform better decisions.
 
   Fully Customizable
 
-  Improve brand awareness and content discoverability through customizable 
+  Improve brand awareness and content discoverability through customizable
   links, supercharging audience engagement.
 
   Boost your links today
@@ -87,10 +103,11 @@
   Our Team
   Careers
   Contact
-  
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
