--- a/index.html
+++ b/index.html
@@ -51,7 +51,30 @@
         <img src="./images/illustration-working.svg" alt="">
       </div>
     </div>
+    <div class="inputUrl">
+      <div class="formInput">
+        <input type="text" id="url">
+        <button id="btnUrl" type="submit">Shorten It!</button>
+      </div>
+    </div>
   </div>
+
+  <section id="statics">
+    <div class="container">
+
+      <div class="text">
+        <div class="titleBody">
+          <h2>Advanced Statistics</h2>
+        </div>
+        <div class="descriptionBody">
+          <h4>Track how your links are performing across the web with our
+            advanced statistics dashboard.
+          </h4>
+        </div>
+      </div>
+    </div>
+
+  </section>
 
 
 
@@ -61,10 +84,6 @@
 
   Shorten It!
 
-  Advanced Statistics
-
-  Track how your links are performing across the web with our
-  advanced statistics dashboard.
 
   Brand Recognition
 
@@ -108,6 +127,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script src="./assets/script/script.js"></script>
 </body>
 
 </html>
