--- a/index.html
+++ b/index.html
@@ -60,18 +60,9 @@
   </div>
 
   <section id="statics">
-    <div class="container">
 
-      <div class="text">
-        <div class="titleBody">
-          <h2>Advanced Statistics</h2>
-        </div>
-        <div class="descriptionBody">
-          <h4>Track how your links are performing across the web with our
-            advanced statistics dashboard.
-          </h4>
-        </div>
-      </div>
+    <div class="boxUrl">
+        
     </div>
 
   </section>
